--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "livekit-server-sdk": "^2.6.1",
     "next": "14.2.6",
     "react": "^18",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18"
   },
   "devDependencies": {
